--- a/iisnode/index.html
+++ b/iisnode/index.html
@@ -53,8 +53,8 @@
     <script type="text/javascript">
 
         // this is replaced with actual data at runtime by code in interceptor.js
-        var logFiles = [{"file":"SGST0443FIDA-1824-stdout-1354223880426.txt","computername":"SGST0443FIDA","pid":1824,"type":"stdout","created":1354223880426},{"file":"WEET-2588-stderr-1353463288871.txt","computername":"WEET","pid":2588,"type":"stderr","created":1353463288871},{"file":"WEET-2588-stdout-1353463288870.txt","computername":"WEET","pid":2588,"type":"stdout","created":1353463288870},{"file":"WEET-2736-stdout-1353463135694.txt","computername":"WEET","pid":2736,"type":"stdout","created":1353463135694}];
-        var lastUpdated = 1354223880922;
+        var logFiles = [{"file":"SGST0443FIDA-11892-stdout-1354563777938.txt","computername":"SGST0443FIDA","pid":11892,"type":"stdout","created":1354563777938},{"file":"SGST0443FIDA-1824-stdout-1354223880426.txt","computername":"SGST0443FIDA","pid":1824,"type":"stdout","created":1354223880426},{"file":"SGST0443FIDA-6772-stdout-1354561331183.txt","computername":"SGST0443FIDA","pid":6772,"type":"stdout","created":1354561331183},{"file":"WEET-2588-stderr-1353463288871.txt","computername":"WEET","pid":2588,"type":"stderr","created":1353463288871},{"file":"WEET-2588-stdout-1353463288870.txt","computername":"WEET","pid":2588,"type":"stdout","created":1353463288870},{"file":"WEET-2736-stdout-1353463135694.txt","computername":"WEET","pid":2736,"type":"stdout","created":1353463135694}];
+        var lastUpdated = 1354563778258;
         var date = new Date();
 
         date.setTime(lastUpdated);
